--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,3 +37,9 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
+        name: 'Upload Artifacts'
+        uses: actions/upload-artifact@v2
+        with:
+          name: build
+          path: build/libs/camelmod-4.0.jar
+          retention-days: 5
