--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -37,7 +37,7 @@ jobs:
         with:
           name: Artifacts
           path: build/libs/
-        name: 'Upload Artifacts'
+      - name: 'Upload Artifacts'
         uses: actions/upload-artifact@v2
         with:
           name: build
