--- a/build.gradle
+++ b/build.gradle
@@ -11,17 +11,12 @@ version = project.mod_version
 group = project.maven_group
 
 dependencies {
-    //to change the versions see the gradle.properties file
-    minecraft "com.mojang:minecraft:${project.minecraft_version}"
-    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
-    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+    minecraft "com.mojang:minecraft:1.17.1"
+    mappings "net.fabricmc:yarn:1.17.1+build.23:v2"
+    modImplementation "net.fabricmc:fabric-loader:0.11.6"
 
-    // Fabric API. This is technically optional, but you probably want it anyway.
-    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-
-    // PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-    // You may need to force-disable transitiveness on them.
-    implementation 'com.google.code.gson:gson:2.8.7'
+    //Fabric api
+    modImplementation "net.fabricmc.fabric-api:fabric-api:0.37.0+1.17"
 }
 
 processResources {
