--- a/gradle.properties
+++ b/gradle.properties
@@ -2,13 +2,13 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.16.5
-yarn_mappings=1.16.5+build.9
-loader_version=0.11.3
+minecraft_version=1.17.1
+yarn_mappings=1.17.1+build.23
+loader_version=0.11.6
 # Mod Properties
-mod_version=4.0
+mod_version=4.1
 maven_group=com.jkcoxson
 archives_base_name=camelmod
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.25.1+build.416-1.16
+fabric_version=0.37.0+1.17
