--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,5 +41,5 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: build
-          path: build/libs/camelmod-4.0.jar
+          path: build/libs/*
           retention-days: 5
